RESOLVED FIXED63779
[WebKit2] Fix code paths that can leave frame view paint behavior in the wrong state
https://bugs.webkit.org/show_bug.cgi?id=63779
Summary [WebKit2] Fix code paths that can leave frame view paint behavior in the wron...
Darin Adler
Reported 2011-06-30 18:44:30 PDT
[WebKit2] Fix code paths that can leave frame view paint behavior in the wrong state
Attachments
Patch (4.70 KB, patch)
2011-06-30 18:47 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2011-06-30 18:47:00 PDT
WebKit Review Bot
Comment 2 2011-08-05 11:23:42 PDT
Comment on attachment 99415 [details] Patch Clearing flags on attachment: 99415 Committed r92491: <http://trac.webkit.org/changeset/92491>
WebKit Review Bot
Comment 3 2011-08-05 11:23:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.